fixed nav bar shift

--- a/internHub/hub/static/css/style.css
+++ b/internHub/hub/static/css/style.css
@@ -1,5 +1,4 @@
 body {
-  padding: 20px;
   background: #fafafa;
   position: relative;
   overflow: hidden;
